fixed some spacing in software

--- a/src/pages/Home.module.css
+++ b/src/pages/Home.module.css
@@ -22,11 +22,11 @@
 }
 
 @keyframes slide-out {
-  0%{left:0px}
-  100%{left:-1500px}
+  0%{transform:translateX(0px)}
+  100%{transform:translateX(-1000px)}
 }
 .slideOut {
-  animation: slide-out 3.5s;
+  animation: slide-out 2.5s;
   transition: 1s;
 
 }
@@ -108,10 +108,10 @@
 .orb1{
   position:absolute;
   /* left:50%; */
-  top:-10%; 
+  top:-25% !important; 
   width: 550px;
   /* min-width: 90%; */
-  transform:translateY(-10%);
+  /* transform:translateY(-10%); */
   z-index: 2;
  /* border: solid; */
  height: 680px;
